--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         </div>
         <button type="submit" class="btn">Add!</button>
       </form>
+      <div id="output">
+
+        
+      </div>
     </div>
   </body>
 </html>
